# ModelTool

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  format.sh  init.sh  watch.sh
.github/workflows/: cmake.yml
data/: pack.pk3  test.script
data/test/: test.hitbox
data/test.pk3dir/: unpacked.dir.cfg
internal.pk3dir/shaders/: generic.fs.glsl  generic.vs.glsl
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
libs/glew-2.1.0/: CMakeLists.txt
src/: UISystem.cpp  UISystem.h  application.cpp  application.h  filesystem.cpp  filesystem.h  io.cpp  io.h  main.cpp  mt.h
src/app/: Camera.cpp  Camera.h  FileBrowser.cpp  FileBrowser.h  Framebuffer.cpp  Framebuffer.h  GLRenderer2.cpp  GLRenderer2.h  GLShader.cpp  GLShader.h  GLWindow.cpp  GLWindow.h  Hitbox.cpp  Hitbox.h  ImGuiView.cpp  ImGuiView.h  Material.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelMD5.cpp  ModelMD5.h  ModelPropertyPanel.cpp  ModelPropertyPanel.h  ScenePanel.cpp  ScenePanel.h  ScriptStream.cpp  ScriptStream.h  SkeletalModel.cpp  SkeletalModel.h  Texture.cpp  Texture.h  UISystem.cpp  UISystem.h  application.cpp  application.h  camera.cpp  camera.h  file_browser.cpp  (+41 more)
src/cli/: main.cpp
src/lib/: MTPath.cpp  MTPath.h  files.h  hitbox.cpp  hitbox.h  io.cpp  io.h  library.h  model.cpp  model.h  model_md5.cpp  model_md5.h  model_mdm.cpp  model_mdm.h  model_types.cpp  model_types.h  mt_path.cpp  mt_path.h  script_stream.cpp  script_stream.h  skeletal_model.cpp  skeletal_model.h  tools.cpp  types.h
tst/: filesystem-test.cpp  hitbox-test.cpp  main.cpp  model_md5-test.cpp  model_mdm-test.cpp  scriptstream-test.cpp
